# SciTrans-LLMs_NEW

./: .dockerignore  .gitignore  ALL_FEATURES_COMPLETE.md  ALL_IMPROVEMENTS_COMPLETE.md  CHANGELOG.md  CODEBASE_ANALYSIS.md  CONTRIBUTING.md  Dockerfile  FINAL_IMPROVEMENTS_SUMMARY.md  FIXES_APPLIED.md  IMPLEMENTATION_COMPLETE_FINAL.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  INSTALLATION_TROUBLESHOOTING.md  LICENSE  Makefile  NEW_FEATURES_IMPLEMENTATION.md  PROGRESS.md  QUICK_INSTALL.sh  QUICK_SETUP_ULTRALYTICS.md  QUICK_START.md  README.md  RELEASE_CHECKLIST.md  REMAINING_WORK.md  SPRINT0_CHANGELOG.md  SPRINT1_CHANGELOG.md  SPRINT2_CHANGELOG.md  SPRINT2_COMPLETE.md  SPRINT3_CHANGELOG.md  SPRINT3_STATUS.md  SPRINT4_CHANGELOG.md  SPRINT5_CHANGELOG.md  SPRINT6_CHANGELOG.md  SPRINT7_CHANGELOG.md  TEST_RESULTS.md  WHAT_TO_DO_NOW.md  WHAT_WAS_DONE.md  consistency_report.json  docker-compose.yml  pyproject.toml  (+19 more)
.github/workflows/: ci.yml
benchmarks/: quality_test.py  speed_test.py
cli/: __init__.py  __main__.py
cli/commands/: __main__.py  interactive.py  main.py
configs/: default.yaml  env.example  example.yaml  glossary_cs.yaml  glossary_math.yaml  prompts.yaml
configs/glossaries/: scientific_ml_en_fr.json
docs/: ABLATIONS.md  API_KEYS_SETUP.md  ARCHITECTURE.md  BACKEND_INSTALLATION.md  CI_CD.md  CLI.md  CONSISTENCY_ISSUES.md  DEPLOYMENT.md  EVALUATION.md  GUI.md  INNOVATIONS.md  LEGACY.md  PYTHON_VERSION_COMPATIBILITY.md  QUICKSTART.md  REPRODUCIBILITY.md  TASK_STATUS.md  TESTING_GUIDE.md  TRAINING_PLAN.md  TRAINING_USAGE.md
examples/: basic_usage.py
experiments/: ablation.py
gui/: app.py  enhanced_app.py  production_app.py  simple_gui.py
scitran/: __init__.py
scitran/core/: artifacts.py  exceptions.py  models.py  pipeline.py  validator.py
scitran/evaluation/: __init__.py  baselines.py  metrics.py
scitran/extraction/: __init__.py  layout.py  pdf_parser.py
scitran/masking/: engine.py
scitran/rendering/: __init__.py  font_resolver.py  pdf_renderer.py
scitran/scoring/: reranker.py
scitran/training/: __init__.py  trainer.py
scitran/translation/: base.py  output_cleaner.py  prompts.py
scitran/utils/: __init__.py  backend_checker.py  batch_translator.py  cache.py  config_loader.py  fast_translator.py  gpu_utils.py  logger.py  progress.py
scripts/: benchmark_performance.py  ci.sh  clean_repo.sh  cleanup.py  evaluate_system.py  identify_deprecated.py  install_ultralytics_python313.md  repro_harness.py  run_comprehensive_tests.py  run_experiment.py  setup_env.sh  setup_python312_for_yolo.sh  smoke_test.sh  test_consistency.py  test_innovations.py
test_data/: README.md  parallel_test_en.txt  parallel_test_fr.txt  sample.html  sample_en.ref.txt  sample_en.txt
tests/: conftest.py
tests/comprehensive/: test_all_features.py
tests/e2e/: test_golden_path.py
tests/fixtures/: pdf_generator.py
tests/integration/: test_backend_reliability.py  test_full_pipeline.py  test_pipeline.py
tests/unit/: test_block_coverage_guarantee.py  test_completeness_validator.py  test_coverage_guarantee.py  test_evaluation_metrics.py  test_glossary.py  test_masking.py  test_masking_latex.py  test_models.py  test_nondestructive_redaction.py  (+5 more)
(+20 files in other folders)
