[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scitrans-llms"
version = "2.0.0"
description = "Advanced Scientific Document Translation with LLMs"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@university.edu"}
]
keywords = ["translation", "nlp", "scientific", "llm", "pdf"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core data processing
    "numpy>=1.24.0,<2.0",
    "pandas>=2.0.0",
    
    # PDF processing
    "PyMuPDF>=1.23.0",
    "pypdf>=3.0.0",
    "pdfplumber>=0.9.0",
    "Pillow>=10.0.0",
    
    # Translation backends (free/basic)
    "openai>=1.0.0",
    "anthropic>=0.25.0",
    "deep-translator>=1.11.0",
    "ollama>=0.1.0",
    
    # Utilities
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "diskcache>=5.6.0",
    "requests>=2.31.0",
    "aiohttp>=3.9.0",
    "httpx>=0.24.0",
    
    # CLI/UI
    "typer>=0.9.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "tqdm>=4.65.0",
    "gradio>=4.0.0",
]

[project.optional-dependencies]
# ML features: HuggingFace backend, advanced reranking
# NOTE: torch currently only supports Python 3.9-3.12
# If using Python 3.13+, install these manually when PyTorch adds support
ml = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "scikit-learn>=1.3.0",
]

# YOLO layout detection (requires torch, so Python 3.9-3.12 only)
yolo = [
    "ultralytics>=8.0.0",
    "opencv-python>=4.8.0",
]

# Evaluation metrics for thesis experiments
eval = [
    "sacrebleu>=2.3.0",
    "nltk>=3.8.0",
    "sacremoses>=0.0.53",
]

# Development tools
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.11.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.4.0",
    "isort>=5.12.0",
]

# Additional GUI features
gui-extra = [
    "plotly>=5.0.0",
]

# Everything (for development)
all = [
    "scitrans-llms[ml,eval,dev,gui-extra]"
]

[project.urls]
Homepage = "https://github.com/yourusername/SciTrans-LLMs_NEW"
Documentation = "https://scitrans-llms.readthedocs.io"
Repository = "https://github.com/yourusername/SciTrans-LLMs_NEW"
Issues = "https://github.com/yourusername/SciTrans-LLMs_NEW/issues"

[project.scripts]
scitran = "cli.commands.main:cli"

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
